CLM-29805 bump react-shared-compoenents to 12.18.2 (#12693)